# ansible

./: .ansible-lint  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  ansible-quickinstall.md  galaxy.yml  inventory_SAMPLE  requirements-selfhostix.yml  requirements-selfhostx.yml  requirements.yml
collections/: requirements.yml
instructions/: awx-manual-install.txt  selfhostx-tag-release.md
instructions/ansible-repo-example/: .ansible-lint  ansible.cfg
playbooks/: baserole-sample.yml  letsencrypt-wildcard-cert-req.yml  mailcow.yml  semaphore.yml  unattended-upgrades-debian.yml
roles/: requirements.yml  unattended-upgrades-debian.yml
roles/netbox/: .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  README.md  playbook.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.yml
roles/netbox/.github/: settings.yml
roles/netbox/.github/workflows/: default.yml  release-galaxy.yml
roles/netbox/defaults/: main.yml
roles/netbox/handlers/: main.yml
roles/netbox/meta/: main.yml
roles/netbox/molecule/centos8/: molecule.yml
roles/netbox/molecule/debian10/: molecule.yml
roles/netbox/molecule/shared/: converge.yml
roles/netbox/molecule/ubuntu2004/: molecule.yml
roles/netbox/tasks/: main.yml  nginx.yml
roles/netbox/templates/: configuration.py.j2  gunicorn.py.j2  nginx-netbox.conf.j2  systemd-timer-housekeeping.j2  systemd-unit-netbox-housekeeping.j2  systemd-unit-netbox-rq.j2  systemd-unit-netbox.j2
roles/netbox/utils/: ingest.py
roles/netbox/vars/: vars-Debian.yml  vars-RedHat.yml
(+387 files in other folders)
