[tool.poetry]
name = "ansible-netbox"
version = "0.1.0"
description = ""
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^4.6.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
flake8 = "^3.9.0"
pycodestyle = "^2.7.0"
pylint = "^2.7.3"
tox = "^3.23.0"
black = "^21.9b0"
ansible-lint = "^5.1.3"
mkdocs = "^1.1.2"
molecule = {extras = ["docker"], version = "^3.3.0"}
yamllint = "^1.26.0"
mkdocs-material = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
